# NoxKit

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: counter.rs  interactive.rs  rects.rs
noxkit-macros/: Cargo.toml
noxkit-macros/src/: lib.rs
src/: app.rs  layout.rs  lib.rs  render.rs  state.rs  view.rs  widgets.rs
src/shaders/: view.wgsl
