[package]
name = "noxkit"
version = "0.1.0"
edition = "2024"

[dependencies]
noxkit-macros = { path = "./noxkit-macros" }
wgpu = "25.0"
taffy = "0.7.4"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.29"
glyphon = "0.9"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
